--- a/src/App.css
+++ b/src/App.css
@@ -59,20 +59,21 @@ html {
   height: 100%; }
 
 .App {
-  /*border: 1px dashed red;*/
   min-height: 100vh;
   position: relative;
   margin: 0;
   padding: 0; }
-  .App .Nav {
-    /* CSS on the component level */ }
-  .App .main-content {
-    min-height: calc(100vh - 100px - 40px);
-    margin-top: 40px;
-    padding: 20px; }
-  .App .Footer {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    height: 100px; }
+
+.App .Nav {
+  /* CSS on the component level */ }
+
+.App .main-content {
+  min-height: calc(100vh - 100px - 40px);
+  margin-top: 40px; }
+
+.App .Footer {
+  background-color: black;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  height: 100px; }
