--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -69,25 +69,46 @@
 
 .ProjectList ul.project-list {
   margin-top: 20px;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
   margin-bottom: 20px; }
 
 .ProjectListItem {
-  border: 1px dashed red;
-  cursor: pointer;
+  cursor: pointer; }
+
+.ProjectListItem.list-style {
+  display: block;
   background-image: none !important;
-  /*	
-	// box/tile design
-	@include flexbox-center(column);
-	width: $project_tile_size;
-	max-width: 100vw;
-	height: $project_tile_size;
-	background-size: cover;
-	background-position: 50% 50%;
-	*/ }
+  height: auto;
+  width: auto; }
+
+.ProjectListItem.box-style {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 200px;
+  max-width: 100vw;
+  height: 200px;
+  background-size: cover;
+  background-position: 50% 50%; }
 
 .ProjectListItem .text {
   padding: 5px; }
@@ -135,25 +156,16 @@
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
   .ProjectList ul.project-list {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
     -webkit-flex-flow: row;
     -moz-flex-flow: row;
     -ms-flex-flow: row;
     flex-flow: row;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center; }
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
   .ProjectListItem {
+    margin-top: 10px;
     margin-right: 10px; } }
 
 /* 640px or smaller */
@@ -177,5 +189,5 @@
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-  .ProjectListItem {
-    margin-bottom: 10px; } }
+  .ProjectListItem.box-style {
+    width: 100vw; } }
