--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@ html {
 	}
 	.main-content {
 		min-height: calc(100vh - #{$footer_height} - #{$fixed_nav_height});
-		margin-top: $fixed_nav_height;
+		margin-top: calc(#{$fixed_nav_height} + #{$gutter});
 	}
 	.Footer {
 		background-color: black;
