--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -77,8 +77,7 @@ $project_tile_size: 200px;
 		}
 	}
 	.ProjectListItem {
-		margin-top: $gutter/2;
-		margin-right: $gutter/2;
+		margin: $gutter/4;
 	}
 }
 
