--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -1,4 +1,4 @@
-/* animation test */
+/* ReactCSSTransitionGroup animation test */
 .example-enter {
   height: 0px; }
 
@@ -73,8 +73,7 @@
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex;
-  margin-bottom: 20px; }
+  display: flex; }
 
 .ProjectListItem {
   cursor: pointer; }
@@ -86,6 +85,7 @@
   width: auto; }
 
 .ProjectListItem.box-style {
+  color: white;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -104,14 +104,14 @@
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
-  width: 200px;
+  width: 100vw;
   max-width: 100vw;
-  height: 200px;
+  height: 300px;
   background-size: cover;
   background-position: 50% 50%; }
 
-.ProjectListItem .text {
-  padding: 5px; }
+.ProjectListItem.box-style p {
+  font-size: 1.414em; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -131,7 +131,9 @@
   -moz-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  -ms-flex-pack: center; }
+  -ms-flex-pack: center;
+  margin-top: 20px;
+  margin-bottom: 80px; }
 
 .ProjectDetail .project-detail-cover {
   height: 400px;
@@ -155,6 +157,8 @@
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
+  .ProjectList #Menu {
+    /*display: none;*/ }
   .ProjectList ul.project-list {
     -webkit-flex-flow: row;
     -moz-flex-flow: row;
@@ -163,12 +167,25 @@
     -webkit-flex-wrap: wrap;
     -moz-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center; }
+  .ProjectList ul.project-list li .text p {
+    border-right: 1px solid black;
+    padding: 0 20px; }
+  .ProjectList ul.project-list li:last-child .text p {
+    border-right: none; }
   .ProjectListItem {
-    margin: 5px; } }
+    padding: 5px 0; } }
 
 /* 640px or smaller */
 @media only screen and (max-width: 640px) {
+  .ProjectList #Menu {
+    cursor: pointer;
+    text-decoration: underline; }
   .ProjectList ul.project-list {
     display: -webkit-box;
     display: -moz-box;
@@ -189,4 +206,6 @@
     justify-content: center;
     -ms-flex-pack: center; }
   .ProjectListItem.box-style {
-    width: 100vw; } }
+    width: 100vw; }
+  .ProjectListItem .text {
+    padding: 5px; } }
