--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -1,4 +1,4 @@
-/* animation test */
+/* ReactCSSTransitionGroup animation test */
 .example-enter {
     height: 0px;
 }
@@ -15,13 +15,12 @@
 
 @import '../../styles/_all';
 
-$project_tile_size: 200px;
+$project_tile_size: 300px;
 
 .ProjectList {
 	ul.project-list {
 		margin-top: $gutter;
 		@include flexbox();
-		margin-bottom: $gutter;
 	}
 }
 .ProjectListItem {
@@ -33,19 +32,22 @@ $project_tile_size: 200px;
 		width: auto;
 	}
 	&.box-style {
+		color: white;
 		@include flexbox-center(column);
-		width: $project_tile_size;
+		width: 100vw; //$project_tile_size;
 		max-width: 100vw;
 		height: $project_tile_size;
 		background-size: cover;
 		background-position: 50% 50%;
+		p {font-size: 1.414em;}						// !! make font-size var
 	}
 	.text {
-		padding: $gutter/4;
 	}
 }
 .ProjectDetail {
 	@include flexbox-center(column);
+	margin-top: $gutter;
+	margin-bottom: $gutter*4;
 	.project-detail-cover {
 		height: 400px;
 		width: 100vw;
@@ -71,19 +73,39 @@ $project_tile_size: 200px;
 /* 640px or bigger */
 @media only screen and (min-width : $breakpoint) {
 	.ProjectList {
+		#Menu {
+			/*display: none;*/
+		}
 		ul.project-list {
 			@include flex-flow(row);
 			@include flex-wrap(wrap);
+			@include justify-content(center);
+			li {
+				.text {
+					p { 
+						border-right: 1px solid black; 
+						padding: 0 $gutter;
+					}
+				}
+				&:last-child {
+					.text {
+						p { border-right: none; }
+					}
+				}
+			}
 		}
 	}
 	.ProjectListItem {
-		margin: $gutter/4;
+		padding: $gutter/4 0;
 	}
 }
 
 /* 640px or smaller */
 @media only screen and (max-width : $breakpoint) {
 	.ProjectList {
+		#Menu {
+			@include clickable();
+		}
 		ul.project-list {
 			@include flexbox-center(column);
 		}
@@ -91,6 +113,9 @@ $project_tile_size: 200px;
 	.ProjectListItem {
 		&.box-style {
 			width: 100vw;
+		}
+		.text {
+			padding: $gutter/4;
 		}
 	}
 }
