--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,6 +1,7 @@
 @mixin border($color) {
 	border: 1px dashed $color;
 }
-@mixin serif($font) {
-	font-family: "ff-tisa-web-pro",Palatino," Palatino Linotype","Palatino LT STD","Book Antiqua",Georgia,serif;
+@mixin clickable() {
+	cursor: pointer;
+	text-decoration: underline;
 }
