--- a/src/pages/Resume/Resume.scss
+++ b/src/pages/Resume/Resume.scss
@@ -111,6 +111,9 @@
 					.title {
 						margin-top: 0;
 					}
+					.institution {
+						margin-bottom: $gutter/2;
+					}
 				}
 				.left-col, .right-col {
 					width: 100%;
