passing test function from App level Route to ProjectList

--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -92,7 +92,7 @@
   width: auto; }
 
 .ProjectListItem.box-style {
-  color: white;
+  /*color: white;*/
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
