--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -38,7 +38,9 @@ $project_tile_size: 300px;
 		width: auto;
 	}
 	&.box-style {
-		/*color: white;*/
+		color: white;
+		background-color: lightgrey;
+		@include border(black);
 		@include flexbox-center(column);
 		width: 100vw; //$project_tile_size;
 		max-width: 100vw;
@@ -57,6 +59,7 @@ $project_tile_size: 300px;
 	.project-detail-cover {
 		height: 400px;
 		width: 100vw;
+		background-color: lightgrey;
 		background-size: cover;
 		background-position: 50% 50%;
 	}
