setup demos for slideup/down CSSTransition animation and smoothScroll()

--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -1,4 +1,10 @@
 /* ReactCSSTransitionGroup animation test */
+.panel {
+  width: 200px;
+  height: 100px;
+  background: green;
+  margin-top: 10px; }
+
 .example-enter {
   height: 0px; }
 
@@ -9,6 +15,56 @@
 .example-leave.example-leave-active {
   height: 0px;
   -webkit-transition: height .3s ease; }
+
+/* animate.css */
+@keyframes bounceIn {
+  from, 20%, 40%, 60%, 80%, to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3); }
+  20% {
+    transform: scale3d(1.1, 1.1, 1.1); }
+  40% {
+    transform: scale3d(0.9, 0.9, 0.9); }
+  60% {
+    opacity: 1;
+    transform: scale3d(1.03, 1.03, 1.03); }
+  80% {
+    transform: scale3d(0.97, 0.97, 0.97); }
+  to {
+    opacity: 1;
+    transform: scale3d(1, 1, 1); } }
+
+@keyframes bounceOut {
+  20% {
+    transform: scale3d(0.9, 0.9, 0.9); }
+  50%, 55% {
+    opacity: 1;
+    transform: scale3d(1.1, 1.1, 1.1); }
+  to {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3); } }
+
+.project-list .list-transition--enter {
+  -webkit-animation-name: bounceIn;
+  -webkit-animation-duration: .8s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  animation-name: bounceIn;
+  animation-duration: .8s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear; }
+
+.project-list .list-transition--leave {
+  -webkit-animation-name: bounceOut;
+  -webkit-animation-duration: 0.5s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  animation-name: bounceOut;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear; }
 
 /* breakpoints */
 /* base units */
@@ -84,40 +140,43 @@
 
 .ProjectListItem {
   cursor: pointer; }
-  .ProjectListItem.list-style {
-    display: block;
-    background-image: none !important;
-    height: auto;
-    width: auto; }
-  .ProjectListItem.box-style {
-    color: white;
-    background-color: lightgrey;
-    border: 1px dashed black;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: column;
-    -moz-flex-flow: column;
-    -ms-flex-flow: column;
-    flex-flow: column;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    width: 100vw;
-    max-width: 100vw;
-    height: 300px;
-    background-size: cover;
-    background-position: 50% 50%; }
-    .ProjectListItem.box-style p {
-      font-size: 1.414em; }
+
+.ProjectListItem.list-style {
+  display: block;
+  background-image: none !important;
+  height: auto;
+  width: auto; }
+
+.ProjectListItem.box-style {
+  color: white;
+  background-color: lightgrey;
+  border: 1px dashed black;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100vw;
+  max-width: 100vw;
+  height: 300px;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectListItem.box-style p {
+  font-size: 1.414em; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -140,22 +199,27 @@
   -ms-flex-pack: center;
   margin-top: 20px;
   margin-bottom: 80px; }
-  .ProjectDetail .project-detail-cover {
-    height: 400px;
-    width: 100vw;
-    background-color: lightgrey;
-    background-size: cover;
-    background-position: 50% 50%; }
-  .ProjectDetail .text {
-    width: 900px;
-    max-width: calc(100vw - 20px*2); }
-    .ProjectDetail .text .list-container {
-      margin-right: 60px;
-      margin-bottom: 20px; }
-      .ProjectDetail .text .list-container:last-child {
-        margin-right: 0; }
-      .ProjectDetail .text .list-container ul {
-        list-style: disc; }
+
+.ProjectDetail .project-detail-cover {
+  height: 400px;
+  width: 100vw;
+  background-color: lightgrey;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectDetail .text {
+  width: 900px;
+  max-width: calc(100vw - 20px*2); }
+
+.ProjectDetail .text .list-container {
+  margin-right: 60px;
+  margin-bottom: 20px; }
+
+.ProjectDetail .text .list-container:last-child {
+  margin-right: 0; }
+
+.ProjectDetail .text .list-container ul {
+  list-style: disc; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
@@ -175,11 +239,11 @@
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-    .ProjectList ul.project-list li .text p {
-      border-right: 1px solid black;
-      padding: 0 20px; }
-    .ProjectList ul.project-list li:last-child .text p {
-      border-right: none; }
+  .ProjectList ul.project-list li .text p {
+    border-right: 1px solid black;
+    padding: 0 20px; }
+  .ProjectList ul.project-list li:last-child .text p {
+    border-right: none; }
   .ProjectListItem {
     padding: 5px 0; } }
 
