--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -1,26 +1,20 @@
 @import '../../styles/_all';
 
 .Contact {
-	border: 1px dashed red;
-	.left-row, .right-row {
-		border: 1px dashed red;
+	#ContactForm {
+		@include justify-content(center);
+		margin-top: $gutter;
 	}
 }
 
 /* 640px or bigger */
 @media only screen and (min-width : $breakpoint) {
 	.Contact {
-		.left-row, .right-row {
-			width: 50%;
-		}
 	}
 }
 
 /* 640px or smaller */
 @media only screen and (max-width : $breakpoint) {
 	.Contact {
-		.left-row, .right-row {
-			width: 100%;
-		}
 	}
 }
