--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -72,6 +72,7 @@
 /* nav */
 /* footer */
 /* colors */
+/* forms */
 .flex-row {
   display: -webkit-box;
   display: -moz-box;
@@ -102,8 +103,36 @@
   -ms-flex-flow: column;
   flex-flow: column; }
 
+/* 640px or smaller */
+@media only screen and (max-width: 640px) {
+  .flex-col.responsive {
+    -webkit-flex-flow: row;
+    -moz-flex-flow: row;
+    -ms-flex-flow: row;
+    flex-flow: row; } }
+
 /* centering with flex */
-.center {
+.flex-center.flex-row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
+
+.flex-center.flex-col {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -123,6 +152,65 @@
   justify-content: center;
   -ms-flex-pack: center; }
 
+form {
+  max-width: calc(100vw - 40px); }
+
+form input, form textarea {
+  color: #3c3c3c;
+  background-color: #fbfbfb;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box; }
+
+form input, form textarea {
+  border: 3px solid black;
+  /*		border: 0;
+		outline: 0;
+		background: transparent;
+		border-bottom: 3px solid black;*/ }
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+form button[type='submit'] {
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 13px;
+  /*width: $button_width;*/
+  cursor: pointer;
+  text-decoration: underline; }
+
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  transition: background-color 5000s ease-in-out 0s; }
+
+/* 640px or bigger */
+@media only screen and (min-width: 640px) {
+  form {
+    min-width: 500px; } }
+
+/* 640px or smaller */
+@media only screen and (max-width: 640px) {
+  form {
+    width: 100%; } }
+
 .ProjectList #PageTitle {
   padding-top: 20px; }
 
@@ -140,40 +228,43 @@
 
 .ProjectListItem {
   cursor: pointer; }
-  .ProjectListItem.list-style {
-    display: block;
-    background-image: none !important;
-    height: auto;
-    width: auto; }
-  .ProjectListItem.box-style {
-    color: white;
-    background-color: lightgrey;
-    border: 1px dashed black;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: column;
-    -moz-flex-flow: column;
-    -ms-flex-flow: column;
-    flex-flow: column;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    width: 100vw;
-    max-width: 100vw;
-    height: 300px;
-    background-size: cover;
-    background-position: 50% 50%; }
-    .ProjectListItem.box-style p {
-      font-size: 1.414em; }
+
+.ProjectListItem.list-style {
+  display: block;
+  background-image: none !important;
+  height: auto;
+  width: auto; }
+
+.ProjectListItem.box-style {
+  color: white;
+  background-color: lightgrey;
+  border: 1px dashed black;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100vw;
+  max-width: 100vw;
+  height: 300px;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectListItem.box-style p {
+  font-size: 1.414em; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -196,22 +287,27 @@
   -ms-flex-pack: center;
   margin-top: 20px;
   margin-bottom: 80px; }
-  .ProjectDetail .project-detail-cover {
-    height: 400px;
-    width: 100vw;
-    background-color: lightgrey;
-    background-size: cover;
-    background-position: 50% 50%; }
-  .ProjectDetail .text {
-    width: 900px;
-    max-width: calc(100vw - 20px*2); }
-    .ProjectDetail .text .list-container {
-      margin-right: 60px;
-      margin-bottom: 20px; }
-      .ProjectDetail .text .list-container:last-child {
-        margin-right: 0; }
-      .ProjectDetail .text .list-container ul {
-        list-style: disc; }
+
+.ProjectDetail .project-detail-cover {
+  height: 400px;
+  width: 100vw;
+  background-color: lightgrey;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectDetail .text {
+  width: 900px;
+  max-width: calc(100vw - 20px*2); }
+
+.ProjectDetail .text .list-container {
+  margin-right: 60px;
+  margin-bottom: 20px; }
+
+.ProjectDetail .text .list-container:last-child {
+  margin-right: 0; }
+
+.ProjectDetail .text .list-container ul {
+  list-style: disc; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
@@ -231,11 +327,11 @@
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-    .ProjectList ul.project-list li .text p {
-      border-right: 1px solid black;
-      padding: 0 20px; }
-    .ProjectList ul.project-list li:last-child .text p {
-      border-right: none; }
+  .ProjectList ul.project-list li .text p {
+    border-right: 1px solid black;
+    padding: 0 20px; }
+  .ProjectList ul.project-list li:last-child .text p {
+    border-right: none; }
   .ProjectListItem {
     padding: 5px 0; } }
 
