--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -5,3 +5,9 @@
 	cursor: pointer;
 	text-decoration: underline;
 }
+@mixin borderbox() {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
