--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -53,17 +53,17 @@ h4 {font-size: 1.414em;}
 small, .font_small {font-size: 0.707em;}
 
 .title {
-	margin-top: $gutter;
-	margin-bottom: $gutter;
+	padding-top: $gutter;
+	padding-bottom: $gutter;
 }
-h1, h2, h3, h4, p, small {
+h1, h2, h3, h4, p, small, .title {
 	&.center {
 		text-align: center;
 	}
 }
 .text {
 	&.center {
-		h1, h2, h3, h4, p, small {
+		h1, h2, h3, h4, p, small, .title {
 			text-align: center;
 		}
 	}
