--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -69,10 +69,14 @@
 /* breakpoints */
 /* base units */
 /* z-index */
+/* transitions */
 /* nav */
 /* footer */
 /* colors */
-/* forms */
+/* buttons */
+/*
+	* flex rows
+*/
 .flex-row {
   display: -webkit-box;
   display: -moz-box;
@@ -84,14 +88,25 @@
   -ms-flex-flow: row;
   flex-flow: row; }
 
+/* spans */
+.flex-row .half-span {
+  width: 50%;
+  height: 100%; }
+
 /* 640px or smaller */
 @media only screen and (max-width: 640px) {
   .flex-row.responsive {
     -webkit-flex-flow: column;
     -moz-flex-flow: column;
     -ms-flex-flow: column;
-    flex-flow: column; } }
+    flex-flow: column; }
+  .flex-row.responsive .half-span {
+    height: 50%;
+    width: 100%; } }
 
+/*
+	* flex cols
+*/
 .flex-col {
   display: -webkit-box;
   display: -moz-box;
@@ -154,35 +169,107 @@
 
 form {
   max-width: calc(100vw - 40px); }
-  form input, form textarea {
-    color: #3c3c3c;
-    background-color: #fbfbfb;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box; }
-  form input, form textarea {
-    border: 2px solid black;
-    /*		border: 0;
+
+form input, form textarea {
+  color: #3c3c3c;
+  background-color: #fbfbfb;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box; }
+
+form input, form textarea {
+  border: 2px solid black;
+  /*		border: 0;
 		outline: 0;
 		background: transparent;
 		border-bottom: 3px solid black;*/ }
-  form textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize: vertical; }
-  form button[type='submit'] {
-    border: none;
-    background-color: black;
-    color: white;
-    padding: 13px;
-    /*width: $button_width;*/
-    cursor: pointer;
-    text-decoration: underline; }
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+form button[type='submit'], form .button {
+  width: 100%; }
+
+/* buttons */
+.button, button[type='submit'] {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: auto;
+  -webkit-transition: all 350ms ease;
+  -moz-transition: all 350ms ease;
+  -ms-transition: all 350ms ease;
+  -o-transition: all 350ms ease; }
+
+.button:hover, button[type='submit']:hover {
+  background-color: white;
+  color: black; }
+
+.button.transparent, button[type='submit'].transparent {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase; }
+
+.button.transparent:hover, button[type='submit'].transparent:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: black; }
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
@@ -224,40 +311,43 @@ select:-webkit-autofill:focus {
 
 .ProjectListItem {
   cursor: pointer; }
-  .ProjectListItem.list-style {
-    display: block;
-    background-image: none !important;
-    height: auto;
-    width: auto; }
-  .ProjectListItem.box-style {
-    color: white;
-    background-color: lightgrey;
-    border: 1px dashed black;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: column;
-    -moz-flex-flow: column;
-    -ms-flex-flow: column;
-    flex-flow: column;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    width: 100vw;
-    max-width: 100vw;
-    height: 300px;
-    background-size: cover;
-    background-position: 50% 50%; }
-    .ProjectListItem.box-style p {
-      font-size: 1.414em; }
+
+.ProjectListItem.list-style {
+  display: block;
+  background-image: none !important;
+  height: auto;
+  width: auto; }
+
+.ProjectListItem.box-style {
+  color: white;
+  background-color: lightgrey;
+  border: 1px dashed black;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100vw;
+  max-width: 100vw;
+  height: 300px;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectListItem.box-style p {
+  font-size: 1.414em; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -280,22 +370,30 @@ select:-webkit-autofill:focus {
   -ms-flex-pack: center;
   margin-top: 20px;
   margin-bottom: 80px; }
-  .ProjectDetail .project-detail-cover {
-    height: 400px;
-    width: 100vw;
-    background-color: lightgrey;
-    background-size: cover;
-    background-position: 50% 50%; }
-  .ProjectDetail .text {
-    width: 900px;
-    max-width: calc(100vw - 20px*2); }
-    .ProjectDetail .text .list-container {
-      margin-right: 60px;
-      margin-bottom: 20px; }
-      .ProjectDetail .text .list-container:last-child {
-        margin-right: 0; }
-      .ProjectDetail .text .list-container ul {
-        list-style: disc; }
+
+.ProjectDetail .project-detail-cover {
+  height: 400px;
+  width: 100vw;
+  background-color: lightgrey;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectDetail .text-container {
+  max-width: calc(100vw - 20px*2);
+  width: 900px;
+  /*@include border(blue);*/
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
+
+.ProjectDetail .text-container .button {
+  margin-top: 20px; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
@@ -315,13 +413,19 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-    .ProjectList ul.project-list li .text p {
-      border-right: 1px solid black;
-      padding: 0 20px; }
-    .ProjectList ul.project-list li:last-child .text p {
-      border-right: none; }
+  .ProjectList ul.project-list li .text p {
+    border-right: 1px solid black;
+    padding: 0 20px; }
+  .ProjectList ul.project-list li:last-child .text p {
+    border-right: none; }
   .ProjectListItem {
-    padding: 5px 0; } }
+    padding: 5px 0; }
+  .ProjectDetail .text-container .text#ProjectDescription {
+    width: 75%;
+    margin-right: 20px; }
+  .ProjectDetail .text-container .text#ProjectSkillsList {
+    width: 25%;
+    margin-left: 20px; } }
 
 /* 640px or smaller */
 @media only screen and (max-width: 640px) {
