--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -1,10 +1,14 @@
 /* breakpoints */
 /* base units */
 /* z-index */
+/* transitions */
 /* nav */
 /* footer */
 /* colors */
-/* forms */
+/* buttons */
+/*
+	* flex rows
+*/
 .flex-row {
   display: -webkit-box;
   display: -moz-box;
@@ -16,14 +20,25 @@
   -ms-flex-flow: row;
   flex-flow: row; }
 
+/* spans */
+.flex-row .half-span {
+  width: 50%;
+  height: 100%; }
+
 /* 640px or smaller */
 @media only screen and (max-width: 640px) {
   .flex-row.responsive {
     -webkit-flex-flow: column;
     -moz-flex-flow: column;
     -ms-flex-flow: column;
-    flex-flow: column; } }
+    flex-flow: column; }
+  .flex-row.responsive .half-span {
+    height: 50%;
+    width: 100%; } }
 
+/*
+	* flex cols
+*/
 .flex-col {
   display: -webkit-box;
   display: -moz-box;
@@ -86,35 +101,107 @@
 
 form {
   max-width: calc(100vw - 40px); }
-  form input, form textarea {
-    color: #3c3c3c;
-    background-color: #fbfbfb;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box; }
-  form input, form textarea {
-    border: 2px solid black;
-    /*		border: 0;
+
+form input, form textarea {
+  color: #3c3c3c;
+  background-color: #fbfbfb;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box; }
+
+form input, form textarea {
+  border: 2px solid black;
+  /*		border: 0;
 		outline: 0;
 		background: transparent;
 		border-bottom: 3px solid black;*/ }
-  form textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize: vertical; }
-  form button[type='submit'] {
-    border: none;
-    background-color: black;
-    color: white;
-    padding: 13px;
-    /*width: $button_width;*/
-    cursor: pointer;
-    text-decoration: underline; }
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+form button[type='submit'], form .button {
+  width: 100%; }
+
+/* buttons */
+.button, button[type='submit'] {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: auto;
+  -webkit-transition: all 350ms ease;
+  -moz-transition: all 350ms ease;
+  -ms-transition: all 350ms ease;
+  -o-transition: all 350ms ease; }
+
+.button:hover, button[type='submit']:hover {
+  background-color: white;
+  color: black; }
+
+.button.transparent, button[type='submit'].transparent {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase; }
+
+.button.transparent:hover, button[type='submit'].transparent:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: black; }
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
@@ -158,22 +245,29 @@ select:-webkit-autofill:focus {
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center; }
-  .Resume .resume-container .resume-section {
-    width: 100%;
-    max-width: 90vw;
-    margin-bottom: 40px; }
-    .Resume .resume-container .resume-section#Skills .skill-section {
-      width: 100%; }
-    .Resume .resume-container .resume-section .resume-section-item {
-      margin-bottom: 20px; }
-      .Resume .resume-container .resume-section .resume-section-item:last-child {
-        margin-bottom: 0; }
-      .Resume .resume-container .resume-section .resume-section-item .title.flex-row {
-        margin-bottom: 20px; }
-        .Resume .resume-container .resume-section .resume-section-item .title.flex-row .institution {
-          margin-right: 20px; }
-    .Resume .resume-container .resume-section ul li {
-      /*list-style: disc;*/ }
+
+.Resume .resume-container .resume-section {
+  width: 100%;
+  max-width: 90vw;
+  margin-bottom: 40px; }
+
+.Resume .resume-container .resume-section#Skills .skill-section {
+  width: 100%; }
+
+.Resume .resume-container .resume-section .resume-section-item {
+  margin-bottom: 20px; }
+
+.Resume .resume-container .resume-section .resume-section-item:last-child {
+  margin-bottom: 0; }
+
+.Resume .resume-container .resume-section .resume-section-item .title.flex-row {
+  margin-bottom: 20px; }
+
+.Resume .resume-container .resume-section .resume-section-item .title.flex-row .institution {
+  margin-right: 20px; }
+
+.Resume .resume-container .resume-section ul li {
+  /*list-style: disc;*/ }
 
 /* 640px or bigger */
 @media only screen and (min-width: 640px) {
@@ -201,16 +295,16 @@ select:-webkit-autofill:focus {
     -ms-align-items: flex-start;
     align-items: flex-start;
     width: 1000px; }
-    .Resume .resume-container .resume-section#Skills .resume-section-item {
-      margin-right: 20px; }
-      .Resume .resume-container .resume-section#Skills .resume-section-item:last-child {
-        margin-right: 0; }
-      .Resume .resume-container .resume-section#Skills .resume-section-item#Skillset ul {
-        margin-right: 20px; }
-        .Resume .resume-container .resume-section#Skills .resume-section-item#Skillset ul:last-child {
-          margin-right: 0; }
-      .Resume .resume-container .resume-section#Skills .resume-section-item#Tools {
-        width: 33%; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item {
+    margin-right: 20px; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item:last-child {
+    margin-right: 0; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item#Skillset ul {
+    margin-right: 20px; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item#Skillset ul:last-child {
+    margin-right: 0; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item#Tools {
+    width: 33%; }
   .Resume .resume-container .left-col {
     margin-right: 40px;
     width: 20%; }
@@ -239,17 +333,17 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-    .Resume .resume-container .resume-section#Skills .resume-section-item {
-      margin-bottom: 20px; }
-      .Resume .resume-container .resume-section#Skills .resume-section-item:last-child {
-        margin-bottom: 0; }
-      .Resume .resume-container .resume-section#Skills .resume-section-item#Skillset ul {
-        margin-right: 40px; }
-      .Resume .resume-container .resume-section#Skills .resume-section-item .title {
-        margin-top: 0; }
-    .Resume .resume-container .resume-section .resume-section-item .title {
-      margin-top: 0; }
-    .Resume .resume-container .resume-section .resume-section-item .institution {
-      margin-bottom: 10px; }
-    .Resume .resume-container .resume-section .left-col, .Resume .resume-container .resume-section .right-col {
-      width: 100%; } }
+  .Resume .resume-container .resume-section#Skills .resume-section-item {
+    margin-bottom: 20px; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item:last-child {
+    margin-bottom: 0; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item#Skillset ul {
+    margin-right: 40px; }
+  .Resume .resume-container .resume-section#Skills .resume-section-item .title {
+    margin-top: 0; }
+  .Resume .resume-container .resume-section .resume-section-item .title {
+    margin-top: 0; }
+  .Resume .resume-container .resume-section .resume-section-item .institution {
+    margin-bottom: 10px; }
+  .Resume .resume-container .resume-section .left-col, .Resume .resume-container .resume-section .right-col {
+    width: 100%; } }
