--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -238,6 +238,9 @@ select:-webkit-autofill:focus {
 .serif {
   font-family: 'Libre Baskerville', serif; }
 
+.monospace {
+  font-family: monospace; }
+
 html {
   font-size: 1em; }
 
