--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -20,6 +20,10 @@ $ms-ratio: $golden;
 	font-family: 'Libre Baskerville', serif;
 }
 
+.monospace {
+	font-family: monospace;
+}
+
 html {font-size: 1em;}
 
 body {
