--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,6 +3,6 @@
 .Home {
 	@include flexbox-center(column);
 	height: calc(100vh - #{$fixed_nav_height});
-	background: black;
-	color: white
+	/*background: black;*/
+	/*color: white*/
 }
