--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -1,71 +1,3 @@
-/* ReactCSSTransitionGroup animation test */
-.panel {
-  width: 200px;
-  height: 100px;
-  background: green;
-  margin-top: 10px; }
-
-.example-enter {
-  height: 0px; }
-
-.example-enter.example-enter-active {
-  height: 100px;
-  -webkit-transition: height .3s ease; }
-
-.example-leave.example-leave-active {
-  height: 0px;
-  -webkit-transition: height .3s ease; }
-
-/* animate.css */
-@keyframes bounceIn {
-  from, 20%, 40%, 60%, 80%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-  0% {
-    opacity: 0;
-    transform: scale3d(0.3, 0.3, 0.3); }
-  20% {
-    transform: scale3d(1.1, 1.1, 1.1); }
-  40% {
-    transform: scale3d(0.9, 0.9, 0.9); }
-  60% {
-    opacity: 1;
-    transform: scale3d(1.03, 1.03, 1.03); }
-  80% {
-    transform: scale3d(0.97, 0.97, 0.97); }
-  to {
-    opacity: 1;
-    transform: scale3d(1, 1, 1); } }
-
-@keyframes bounceOut {
-  20% {
-    transform: scale3d(0.9, 0.9, 0.9); }
-  50%, 55% {
-    opacity: 1;
-    transform: scale3d(1.1, 1.1, 1.1); }
-  to {
-    opacity: 0;
-    transform: scale3d(0.3, 0.3, 0.3); } }
-
-.project-list .list-transition--enter {
-  -webkit-animation-name: bounceIn;
-  -webkit-animation-duration: .8s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-timing-function: linear;
-  animation-name: bounceIn;
-  animation-duration: .8s;
-  animation-iteration-count: 1;
-  animation-timing-function: linear; }
-
-.project-list .list-transition--leave {
-  -webkit-animation-name: bounceOut;
-  -webkit-animation-duration: 0.5s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-timing-function: linear;
-  animation-name: bounceOut;
-  animation-duration: 0.5s;
-  animation-iteration-count: 1;
-  animation-timing-function: linear; }
-
 /* breakpoints */
 /* base units */
 /* z-index */
@@ -310,18 +242,18 @@ select:-webkit-autofill:focus {
   display: flex; }
 
 .ProjectListItem {
-  cursor: pointer; }
+  cursor: pointer;
+  max-width: 100vw; }
 
 .ProjectListItem.list-style {
   display: block;
-  background-image: none !important;
   height: auto;
   width: auto; }
 
+.ProjectListItem.list-style .bg-img {
+  background-image: none !important; }
+
 .ProjectListItem.box-style {
-  color: white;
-  background-color: lightgrey;
-  border: 1px dashed black;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -340,14 +272,18 @@ select:-webkit-autofill:focus {
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
-  width: 100vw;
-  max-width: 100vw;
-  height: 300px;
-  background-size: cover;
-  background-position: 50% 50%; }
+  width: 560px;
+  height: 350px;
+  margin: 10px; }
 
 .ProjectListItem.box-style p {
   font-size: 1.414em; }
+
+.ProjectListItem.box-style .bg-img {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: 50% 50%; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -451,7 +387,5 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-  .ProjectListItem.box-style {
-    width: 100vw; }
   .ProjectListItem .text {
     padding: 5px; } }
