--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -234,7 +234,6 @@ select:-webkit-autofill:focus {
   text-decoration: underline; }
 
 .ProjectList ul.project-list {
-  margin-top: 20px;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -252,6 +251,12 @@ select:-webkit-autofill:focus {
 
 .ProjectListItem.list-style .bg-img {
   background-image: none !important; }
+
+.ProjectListItem.list-style .text .project-name {
+  font-size: 1em; }
+
+.ProjectListItem.list-style .text .project-type {
+  display: none; }
 
 .ProjectListItem.box-style {
   display: -webkit-box;
@@ -273,11 +278,11 @@ select:-webkit-autofill:focus {
   justify-content: center;
   -ms-flex-pack: center;
   width: 560px;
-  height: 350px;
-  margin: 10px; }
+  height: 350px; }
 
-.ProjectListItem.box-style p {
-  font-size: 1.414em; }
+.ProjectListItem.box-style .text {
+  text-align: center;
+  margin-top: 10px; }
 
 .ProjectListItem.box-style .bg-img {
   height: 100%;
@@ -336,6 +341,8 @@ select:-webkit-autofill:focus {
   .ProjectList #Menu {
     /*display: none;*/ }
   .ProjectList ul.project-list {
+    padding-top: 20px;
+    padding-bottom: 20px;
     -webkit-flex-flow: row;
     -moz-flex-flow: row;
     -ms-flex-flow: row;
@@ -349,13 +356,15 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-  .ProjectList ul.project-list li .text p {
+  .ProjectList ul.project-list li .ProjectListItem.list-style .text .project-name {
     border-right: 1px solid black;
     padding: 0 20px; }
-  .ProjectList ul.project-list li:last-child .text p {
+  .ProjectList ul.project-list li:last-child .ProjectListItem.list-style .text .project-name {
     border-right: none; }
   .ProjectListItem {
     padding: 5px 0; }
+  .ProjectListItem.box-style {
+    margin: 10px; }
   .ProjectDetail .text-container .text#ProjectDescription {
     width: 75%;
     margin-right: 20px; }
@@ -387,5 +396,9 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-  .ProjectListItem .text {
+  .ProjectListItem.list-style .text {
+    margin-bottom: 10px; }
+  .ProjectListItem.box-style {
+    margin-bottom: 20px; }
+  .ProjectListItem.box-style .text {
     padding: 5px; } }
