--- a/src/App.css
+++ b/src/App.css
@@ -243,8 +243,36 @@ html {
   margin-top: 60px; }
 
 .App .Footer {
-  background-color: #f3f3f3;
-  color: black;
-  padding: 20px;
-  text-align: center;
-  height: 100px; }
+  /* CSS on the component level */ }
+
+/*
+	scroll progress bar
+*/
+#ScrollProgress {
+  height: 5px;
+  width: 100%;
+  color: blue;
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  /* Reset the appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* Get rid of the default border in Firefox/Opera. */
+  border: none;
+  /* Progress bar container for Firefox/IE10+ */
+  background-color: transparent;
+  /* Progress bar value for IE10+ */
+  color: blue; }
+
+#ScrollProgress::-webkit-progress-bar {
+  background-color: transparent; }
+
+#ScrollProgress::-webkit-progress-value {
+  background-color: blue; }
+
+#ScrollProgress::-moz-progress-bar {
+  background-color: blue; }
