--- a/src/Footer.css
+++ b/src/Footer.css
@@ -226,129 +226,11 @@ select:-webkit-autofill:focus {
   form {
     width: 100%; } }
 
-.Nav {
-  z-index: 10;
-  -webkit-transition: all 350ms ease;
-  -moz-transition: all 350ms ease;
-  -ms-transition: all 350ms ease;
-  -o-transition: all 350ms ease;
-  background-color: white;
-  position: fixed;
-  top: 0;
-  left: 0; }
-
-.Nav #Logo {
-  position: fixed; }
-
-.Nav ul {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex; }
-
-.Nav ul li {
-  margin: 10px;
-  display: inline;
-  letter-spacing: 0.2em; }
-
-/* 640px or bigger */
-@media only screen and (min-width: 640px) {
-  .NavTrigger {
-    display: none; }
-  .Nav {
-    height: 60px;
-    width: 100vw;
-    border-bottom: 1px solid lightgrey;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row;
-    -moz-flex-flow: row;
-    -ms-flex-flow: row;
-    flex-flow: row;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: flex-end;
-    -moz-justify-content: flex-end;
-    -ms-justify-content: flex-end;
-    justify-content: flex-end;
-    -ms-flex-pack: flex-end; }
-  .Nav #Logo {
-    top: 10px;
-    left: 20px; }
-  .Nav ul {
-    -webkit-flex-flow: row;
-    -moz-flex-flow: row;
-    -ms-flex-flow: row;
-    flex-flow: row;
-    -webkit-justify-content: flex-end;
-    -moz-justify-content: flex-end;
-    -ms-justify-content: flex-end;
-    justify-content: flex-end;
-    -ms-flex-pack: flex-end;
-    padding: 0;
-    margin: 0 20px; }
-  .Nav ul li {
-    margin: 10px;
-    display: inline; } }
-
-/* 640px or smaller */
-@media only screen and (max-width: 640px) {
-  .Nav {
-    z-index: 100; }
-  .NavTrigger {
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    display: block;
-    padding: 10px;
-    cursor: pointer;
-    position: fixed;
-    top: 0;
-    right: 0;
-    text-shadow: white 1px 0px 0px; }
-  .NavTrigger h1 {
-    display: inline-block;
-    margin: 0; }
-  .Nav {
-    height: 100vh;
-    width: 300px;
-    max-width: 70vw;
-    background-color: #030303;
-    color: white; }
-  .Nav.open {
-    -webkit-transform: translate3d(0vw, 0, 0);
-    -moz-transform: translate3d(0vw, 0, 0);
-    -ms-transform: translate3d(0vw, 0, 0);
-    -o-transform: translate3d(0vw, 0, 0); }
-  .Nav.closed {
-    -webkit-transform: translate3d(-300px, 0, 0);
-    -moz-transform: translate3d(-300px, 0, 0);
-    -ms-transform: translate3d(-300px, 0, 0);
-    -o-transform: translate3d(-300px, 0, 0); }
-  .Nav #Logo {
-    left: 40px;
-    bottom: 20px; }
-  .Nav ul {
-    -webkit-flex-flow: column;
-    -moz-flex-flow: column;
-    -ms-flex-flow: column;
-    flex-flow: column;
-    padding: 20px;
-    margin: 0; }
-  .Nav ul li {
-    margin: 10px;
-    display: block; }
-  .Nav ul li p {
-    color: white; } }
+.Footer {
+  border-top: 2px solid #f3f3f3;
+  width: 70vw;
+  margin: 0 auto;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  height: 100px; }
