--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -20,10 +20,21 @@
   -ms-flex-flow: row;
   flex-flow: row; }
 
-/* spans */
 .flex-row .half-span {
   width: 50%;
   height: 100%; }
+
+.flex-row .third-span {
+  width: 33%; }
+
+.flex-row .two-third-span {
+  width: 66%; }
+
+.flex-row .quarter-span {
+  width: 25%; }
+
+.flex-row .three-quarter-span {
+  width: 75%; }
 
 /* 640px or smaller */
 @media only screen and (max-width: 640px) {
@@ -32,9 +43,16 @@
     -moz-flex-flow: column;
     -ms-flex-flow: column;
     flex-flow: column; }
-    .flex-row.responsive .half-span {
-      height: 50%;
-      width: 100%; } }
+  .flex-row.responsive .half-span {
+    height: 50%;
+    width: 100%; }
+  .flex-row.responsive .third-span {
+    width: 100%; }
+  .flex-row.responsive .two-third-span {
+    width: 100%; }
+  .left-col, .right-col {
+    width: 100%;
+    margin: 0; } }
 
 /*
 	* flex cols
@@ -99,31 +117,68 @@
   justify-content: center;
   -ms-flex-pack: center; }
 
+/* text content */
+.text-container {
+  border: 1px dashed red;
+  max-width: calc(100vw - 20px*2);
+  margin-left: auto;
+  margin-right: auto; }
+
+.text {
+  border: 1px dashed blue; }
+
+/* basic layouts + padded widths */
+.left-col, .right-col {
+  border: 1px dashed grey; }
+
+.left-col {
+  margin-right: 40px;
+  width: 20%; }
+
+.right-col {
+  margin-left: 40px;
+  width: 80%; }
+
+.padded-width {
+  max-width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px dashed orange; }
+
+/* 640px or bigger */
+@media only screen and (min-width: 640px) {
+  .padded-width {
+    width: 1000px; } }
+
 form {
   max-width: calc(100vw - 40px); }
-  form input, form textarea {
-    color: #3c3c3c;
-    background-color: #fbfbfb;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box; }
-  form input, form textarea {
-    border: 2px solid black;
-    /*		border: 0;
+
+form input, form textarea {
+  color: #3c3c3c;
+  background-color: #fbfbfb;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box; }
+
+form input, form textarea {
+  border: 2px solid black;
+  /*		border: 0;
 		outline: 0;
 		background: transparent;
 		border-bottom: 3px solid black;*/ }
-  form textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize: vertical; }
-  form button[type='submit'], form .button {
-    width: 100%; }
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+form button[type='submit'], form .button {
+  width: 100%; }
 
 /* buttons */
 .button, button[type='submit'] {
@@ -160,41 +215,44 @@ form {
   -moz-transition: all 350ms ease;
   -ms-transition: all 350ms ease;
   -o-transition: all 350ms ease; }
-  .button:hover, button[type='submit']:hover {
-    background-color: white;
-    color: black; }
-  .button.transparent, button[type='submit'].transparent {
-    background-color: transparent;
-    color: black;
-    cursor: pointer;
-    text-decoration: underline;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row;
-    -moz-flex-flow: row;
-    -ms-flex-flow: row;
-    flex-flow: row;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    padding: 13.33333px;
-    cursor: pointer;
-    text-decoration: underline;
-    border: 2px solid black;
-    text-decoration: none;
-    text-transform: uppercase; }
-    .button.transparent:hover, button[type='submit'].transparent:hover {
-      background-color: rgba(255, 255, 255, 0);
-      color: black; }
+
+.button:hover, button[type='submit']:hover {
+  background-color: white;
+  color: black; }
+
+.button.transparent, button[type='submit'].transparent {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase; }
+
+.button.transparent:hover, button[type='submit'].transparent:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: black; }
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
