--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -65,7 +65,7 @@ h1, h2, h3, h4, p, small, .title {
 		text-align: center;
 	}
 }
-.text {
+.text, .text-container {
 	&.center {
 		h1, h2, h3, h4, p, small, .title {
 			text-align: center;
