--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,7 @@
   .flex-row.responsive .half-span {
     height: 50%;
     width: 100%; }
-  .flex-row.responsive .third-span {
-    width: 100%; }
-  .flex-row.responsive .two-third-span {
+  .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
     width: 100%; }
   .left-col, .right-col {
     width: 100%;
@@ -140,15 +138,21 @@
   width: 80%; }
 
 .padded-width {
-  max-width: 90vw;
+  width: 1000px;
   margin-left: auto;
-  margin-right: auto;
-  border: 1px dashed orange; }
+  margin-right: auto; }
 
-/* 640px or bigger */
-@media only screen and (min-width: 640px) {
+/* 640px or smaller */
+@media only screen and (max-width: 640px) {
+  .left-col, .right-col {
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%; }
   .padded-width {
-    width: 1000px; } }
+    max-width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px dashed orange; } }
 
 form {
   max-width: calc(100vw - 40px); }
