--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -270,6 +270,9 @@ select:-webkit-autofill:focus {
   form {
     width: 100%; } }
 
+.grey {
+  color: grey; }
+
 .ProjectList #PageTitle {
   padding-top: 20px; }
 
