--- a/src/pages/Resume/Resume.scss
+++ b/src/pages/Resume/Resume.scss
@@ -79,6 +79,9 @@
 						&#Skillset {
 							ul {
 								margin-right: $gutter*2;
+								&:last-child {
+									margin-right: 0;
+								}
 							}
 						}
 						.title {
