--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -37,17 +37,17 @@
   width: 75%; }
 
 /* 640px or smaller */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 769px) {
   .flex-row.responsive {
     -webkit-flex-flow: column;
     -moz-flex-flow: column;
     -ms-flex-flow: column;
     flex-flow: column; }
-    .flex-row.responsive .half-span {
-      height: 50%;
-      width: 100%; }
-    .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
-      width: 100%; } }
+  .flex-row.responsive .half-span {
+    height: 50%;
+    width: 100%; }
+  .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
+    width: 100%; } }
 
 /*
 	* flex cols
@@ -64,7 +64,7 @@
   flex-flow: column; }
 
 /* 640px or smaller */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 769px) {
   .flex-col.responsive {
     -webkit-flex-flow: row;
     -moz-flex-flow: row;
@@ -127,7 +127,7 @@
   margin-right: auto; }
 
 /* 640px or smaller */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 769px) {
   .left-col, .right-col {
     margin-right: auto;
     margin-left: auto;
@@ -139,29 +139,33 @@
 
 form {
   max-width: calc(100vw - 40px); }
-  form input, form textarea {
-    color: #3c3c3c;
-    background-color: #fbfbfb;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box; }
-  form input, form textarea {
-    border: 2px solid black;
-    /*		border: 0;
+
+form input, form textarea {
+  color: #3c3c3c;
+  background-color: #fbfbfb;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box; }
+
+form input, form textarea {
+  border: 2px solid black;
+  /*		border: 0;
 		outline: 0;
 		background: transparent;
 		border-bottom: 3px solid black;*/ }
-  form textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize: vertical; }
-  form button[type='submit'], form .button {
-    width: 100%; }
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+form button[type='submit'], form .button {
+  width: 100%; }
 
 /* buttons */
 .button, button[type='submit'] {
@@ -194,45 +198,49 @@ form {
   text-decoration: none;
   text-transform: uppercase;
   width: auto;
+  max-width: 280px;
   -webkit-transition: all 350ms ease;
   -moz-transition: all 350ms ease;
   -ms-transition: all 350ms ease;
   -o-transition: all 350ms ease; }
-  .button:hover, button[type='submit']:hover {
-    background-color: white;
-    color: black; }
-  .button.transparent, button[type='submit'].transparent {
-    background-color: transparent;
-    color: black;
-    cursor: pointer;
-    text-decoration: underline;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row;
-    -moz-flex-flow: row;
-    -ms-flex-flow: row;
-    flex-flow: row;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    padding: 13.33333px;
-    cursor: pointer;
-    text-decoration: underline;
-    border: 2px solid black;
-    text-decoration: none;
-    text-transform: uppercase; }
-    .button.transparent:hover, button[type='submit'].transparent:hover {
-      background-color: rgba(255, 255, 255, 0);
-      color: black; }
+
+.button:hover, button[type='submit']:hover {
+  background-color: white;
+  color: black; }
+
+.button.transparent, button[type='submit'].transparent {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase; }
+
+.button.transparent:hover, button[type='submit'].transparent:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: black; }
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
@@ -248,12 +256,12 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s; }
 
 /* 640px or bigger */
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 769px) {
   form {
     min-width: 500px; } }
 
 /* 640px or smaller */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 769px) {
   form {
     width: 100%; } }
 
@@ -277,46 +285,53 @@ select:-webkit-autofill:focus {
 .ProjectListItem {
   cursor: pointer;
   max-width: 100vw; }
-  .ProjectListItem.list-style {
-    display: block;
-    height: auto;
-    width: auto; }
-    .ProjectListItem.list-style .bg-img {
-      background-image: none !important; }
-    .ProjectListItem.list-style .text .project-name {
-      font-size: 1em; }
-    .ProjectListItem.list-style .text .project-type {
-      display: none; }
-  .ProjectListItem.box-style {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: column;
-    -moz-flex-flow: column;
-    -ms-flex-flow: column;
-    flex-flow: column;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    width: 560px;
-    height: 350px; }
-    .ProjectListItem.box-style .text {
-      text-align: center;
-      margin-top: 10px; }
-    .ProjectListItem.box-style .bg-img {
-      height: 100%;
-      width: 100%;
-      background-color: lightgrey;
-      background-size: cover;
-      background-position: 50% 50%; }
+
+.ProjectListItem.list-style {
+  display: block;
+  height: auto;
+  width: auto; }
+
+.ProjectListItem.list-style .bg-img {
+  background-image: none !important; }
+
+.ProjectListItem.list-style .text .project-name {
+  font-size: 1em; }
+
+.ProjectListItem.list-style .text .project-type {
+  display: none; }
+
+.ProjectListItem.box-style {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 560px;
+  height: 350px; }
+
+.ProjectListItem.box-style .text {
+  text-align: center;
+  margin-top: 10px; }
+
+.ProjectListItem.box-style .bg-img {
+  height: 100%;
+  width: 100%;
+  background-color: lightgrey;
+  background-size: cover;
+  background-position: 50% 50%; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -338,28 +353,31 @@ select:-webkit-autofill:focus {
   justify-content: center;
   -ms-flex-pack: center;
   margin-bottom: 20px; }
-  .ProjectDetail .project-detail-cover {
-    height: 400px;
-    width: 100vw;
-    background-color: lightgrey;
-    background-size: cover;
-    background-position: 50% 50%; }
-  .ProjectDetail .text-container {
-    /*@include border(blue);*/
-    -webkit-align-items: flex-start;
-    -moz-align-items: flex-start;
-    -ms-align-items: flex-start;
-    align-items: flex-start;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center; }
-    .ProjectDetail .text-container .button {
-      margin-top: 20px; }
+
+.ProjectDetail .project-detail-cover {
+  height: 400px;
+  width: 100vw;
+  background-color: lightgrey;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+.ProjectDetail .text-container {
+  /*@include border(blue);*/
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
+
+.ProjectDetail .text-container .button {
+  margin-top: 20px; }
 
 /* 640px or bigger */
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 769px) {
   .ProjectList #Menu {
     /*display: none;*/ }
   .ProjectList ul.project-list {
@@ -378,15 +396,15 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-    .ProjectList ul.project-list li .ProjectListItem.list-style .text .project-name {
-      border-right: 1px solid black;
-      padding: 0 20px; }
-    .ProjectList ul.project-list li:last-child .ProjectListItem.list-style .text .project-name {
-      border-right: none; }
+  .ProjectList ul.project-list li .ProjectListItem.list-style .text .project-name {
+    border-right: 1px solid black;
+    padding: 0 20px; }
+  .ProjectList ul.project-list li:last-child .ProjectListItem.list-style .text .project-name {
+    border-right: none; }
   .ProjectListItem {
     padding: 5px 0; }
-    .ProjectListItem.box-style {
-      margin: 10px; }
+  .ProjectListItem.box-style {
+    margin: 10px; }
   .ProjectDetail .text-container .text#ProjectDescription {
     /*width: 75%;*/
     margin-right: 20px; }
@@ -395,7 +413,7 @@ select:-webkit-autofill:focus {
     margin-left: 20px; } }
 
 /* 640px or smaller */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 769px) {
   .ProjectList #Menu {
     cursor: pointer;
     text-decoration: underline; }
@@ -422,5 +440,5 @@ select:-webkit-autofill:focus {
     margin-bottom: 10px; }
   .ProjectListItem.box-style {
     margin-bottom: 20px; }
-    .ProjectListItem.box-style .text {
-      padding: 5px; } }
+  .ProjectListItem.box-style .text {
+    padding: 5px; } }
