--- a/src/utilities/ScrollBar/ScrollBar.css
+++ b/src/utilities/ScrollBar/ScrollBar.css
@@ -43,11 +43,11 @@
     -moz-flex-flow: column;
     -ms-flex-flow: column;
     flex-flow: column; }
-    .flex-row.responsive .half-span {
-      height: 50%;
-      width: 100%; }
-    .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
-      width: 100%; } }
+  .flex-row.responsive .half-span {
+    height: 50%;
+    width: 100%; }
+  .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
+    width: 100%; } }
 
 /*
 	* flex cols
@@ -140,29 +140,33 @@
 
 form {
   max-width: calc(100vw - 40px); }
-  form input, form textarea {
-    color: #3c3c3c;
-    background-color: #fbfbfb;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box; }
-  form input, form textarea {
-    border: 2px solid black;
-    /*		border: 0;
+
+form input, form textarea {
+  color: #3c3c3c;
+  background-color: #fbfbfb;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box; }
+
+form input, form textarea {
+  border: 2px solid black;
+  /*		border: 0;
 		outline: 0;
 		background: transparent;
 		border-bottom: 3px solid black;*/ }
-  form textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize: vertical; }
-  form button[type='submit'], form .button {
-    width: 100%; }
+
+form textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+form button[type='submit'], form .button {
+  width: 100%; }
 
 /* buttons */
 .button, button[type='submit'] {
@@ -200,41 +204,44 @@ form {
   -moz-transition: all 350ms ease;
   -ms-transition: all 350ms ease;
   -o-transition: all 350ms ease; }
-  .button:hover, button[type='submit']:hover {
-    background-color: white;
-    color: black; }
-  .button.transparent, button[type='submit'].transparent {
-    background-color: transparent;
-    color: black;
-    cursor: pointer;
-    text-decoration: underline;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row;
-    -moz-flex-flow: row;
-    -ms-flex-flow: row;
-    flex-flow: row;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    padding: 13.33333px;
-    cursor: pointer;
-    text-decoration: underline;
-    border: 2px solid black;
-    text-decoration: none;
-    text-transform: uppercase; }
-    .button.transparent:hover, button[type='submit'].transparent:hover {
-      background-color: rgba(255, 255, 255, 0);
-      color: black; }
+
+.button:hover, button[type='submit']:hover {
+  background-color: white;
+  color: black; }
+
+.button.transparent, button[type='submit'].transparent {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  text-decoration: underline;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row;
+  -moz-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 13.33333px;
+  cursor: pointer;
+  text-decoration: underline;
+  border: 2px solid black;
+  text-decoration: none;
+  text-transform: uppercase; }
+
+.button.transparent:hover, button[type='submit'].transparent:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: black; }
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
@@ -263,6 +270,19 @@ select:-webkit-autofill:focus {
   color: grey; }
 
 /*
+	* base for all background images
+*/
+.bg-img {
+  -webkit-transition: background-image 100ms ease-in;
+  -moz-transition: background-image 100ms ease-in;
+  -ms-transition: background-image 100ms ease-in;
+  -o-transition: background-image 100ms ease-in;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: 50% 50%; }
+
+/*
 	scroll progress bar
 */
 #ScrollProgress {
@@ -284,9 +304,12 @@ select:-webkit-autofill:focus {
   background-color: transparent;
   /* Progress bar value for IE10+ */
   color: red; }
-  #ScrollProgress::-webkit-progress-bar {
-    background-color: transparent; }
-  #ScrollProgress::-webkit-progress-value {
-    background-color: red; }
-  #ScrollProgress::-moz-progress-bar {
-    background-color: red; }
+
+#ScrollProgress::-webkit-progress-bar {
+  background-color: transparent; }
+
+#ScrollProgress::-webkit-progress-value {
+  background-color: red; }
+
+#ScrollProgress::-moz-progress-bar {
+  background-color: red; }
