--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -5,6 +5,7 @@
 	@include transition(background-image 100ms ease-in);
 	height: 100%;
 	width: 100%;
-	background-size: cover;
-	background-position: 50% 50%;
+	background-repeat:no-repeat;
+	background-size:contain;
+	background-position:center;
 }
